--- a/Analysis/R-analysis/homeowner_rehab_analysis.Rmd
+++ b/Analysis/R-analysis/homeowner_rehab_analysis.Rmd
@@ -4,6 +4,7 @@ output: html_document
 ---
 
 ```{r, echo = FALSE, warning=FALSE, message=FALSE, results='hide'}
+# load in necessary libraries
 library(readr)
 library(dplyr)
 library(ggplot2)
@@ -18,24 +19,24 @@ library(plotly)
 ```
 
 ```{r, echo=FALSE}
+# this file contains all housing projects with project type "Homeowner Rehabilitation" linked with utility bills from 2012 - 2019
 df = read_csv("homerehab.csv")
+
+# this file contains monthly weather data
 df_w = read_csv("weather.csv")
+
+# create two dataframes, one for gas consumption and one for electricity consumption
 df_g <- df %>% filter(ServiceType == "RGAS") %>% group_by(address, ServiceType, Year, Month) 
 df_e <- df %>% filter(ServiceType == "RELC") %>% group_by(address, ServiceType, Year, Month) 
-head(df)
-nrow(df)
 ```
 
 ```{r, echo=FALSE}
-# Group by variables to keep, summarize consumption and consumption per SQFT so that there is only one record for a property per month
+# group by variables to keep, summarize consumption and consumption per SQFT so that there is only one record for a property per month
 df_g1 <- df_g %>% group_by(address, ServiceType, Year, Month, DaysOfService, AddressID, ChargeDate) %>% summarise(TotalConsumption =sum(Consumption), TotalConsPerSQFT = sum(ConsumptionPerSQFT))
-nrow(df_g1)
-head(df_g1)
 ```
 
 ```{r, echo=FALSE}
-# Change the month of the ChargeDate to accurately represent that the utility consumption comes from
-
+# change the month of the ChargeDate to accurately represent the month that the utility consumption comes from
 for (proj in 1:nrow(df_g1)) {
   month(df_g1$ChargeDate[proj]) = month(df_g1$ChargeDate[proj]) - 1
   if (df_g1$Month[proj] == 1) {
@@ -45,11 +46,10 @@ for (proj in 1:nrow(df_g1)) {
     df_g1$Month[proj] = df_g1$Month[proj] - 1 
   }
 }
-
 ```
 
 ```{r, echo=FALSE}
-# Normalize consumption per sq ft by the days of the month the bill comes from
+# normalize consumption per sq. ft. by the days of the month the bill comes from
 nod <- c(31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31)
 nod_ly <- c(31, 29, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31)
 
@@ -63,40 +63,37 @@ for (proj in 1:nrow(df_g1)) {
     df_g1$NormalConsSQFT = df_g1$TotalConsPerSQFT / d
   }
 }
-nrow(df_g1)
 ```
 
 ```{r, echo=FALSE}
-# Check for any addresses where there is zero consumption for the whole year
+# check for any addresses where there is zero consumption for the whole year
 y <- df_g1 %>% group_by(address, Year) %>% summarise(TotalNormal = sum(NormalConsSQFT))
 for (proj in 1:nrow(y)) {
   if (y$TotalNormal[proj] == 0) {
     df_g1 <- subset(df_g1, !(df_g1$address == y$address[proj] & df_g1$Year == y$Year[proj]))
   }
 }
-nrow(df_g1)
 ```
 
 ```{r, echo=FALSE}
-# Find mean consumption for all records in dataset per month
+# mean consumption for all records in dataset per month
 m <- df_g1 %>% group_by(Month, Year) %>% summarise(MeanNormalCons = mean(NormalConsSQFT))
 ```
 
 ```{r, echo=FALSE}
+# create a graphable date
 m$ym <- as.yearmon(paste(m$Year, m$Month), "%Y %m")
+
+# plot month and year by the mean normalized gas consumption of "Homeowner Rehabilitation" projects
 p1 <- ggplot(m, aes(x=ym, y=MeanNormalCons)) + geom_line() + labs(x = '', y = 'Mean CCF/sq ft/day', title = 'Mean consumption of gas for households with "Homeowner Rehabilitation" projects over time') + theme(axis.text.x = element_blank(), axis.ticks.x = element_blank())
-p1
 ```
 ```{r, echo=FALSE}
-# Group by variables to keep, summarize consumption and consumption per SQFT so that there is only one record for a property per month
+# group by variables to keep, summarize consumption and consumption per SQFT so that there is only one record for a property per month
 df_e1 <- df_e %>% group_by(address, ServiceType, Year, Month, DaysOfService, AddressID, ChargeDate) %>% summarise(TotalConsumption =sum(Consumption), TotalConsPerSQFT = sum(ConsumptionPerSQFT))
-nrow(df_e1)
-head(df_e1)
 ```
 
 ```{r, echo=FALSE}
-# Change the month of the ChargeDate to accurately represent that the utility consumption comes from
-
+# change the month of the ChargeDate to accurately represent the month that the utility consumption comes from
 for (proj in 1:nrow(df_e1)) {
   month(df_e1$ChargeDate[proj]) = month(df_e1$ChargeDate[proj]) - 1
   if (df_e1$Month[proj] == 1) {
@@ -110,7 +107,7 @@ for (proj in 1:nrow(df_e1)) {
 ```
 
 ```{r, echo=FALSE}
-# Normalize consumption per sq ft by the days of the month the bill comes from
+# normalize consumption per sq. ft. by the days of the month the bill comes from
 nod <- c(31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31)
 nod_ly <- c(31, 29, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31)
 
@@ -124,39 +121,42 @@ for (proj in 1:nrow(df_e1)) {
     df_e1$NormalConsSQFT = df_e1$TotalConsPerSQFT / d
   }
 }
-nrow(df_e1)
 ```
 
 ```{r, echo=FALSE}
-# Check for any addresses where there is zero consumption for the whole year
+# check for any addresses where there is zero consumption for the whole year
 y1 <- df_e1 %>% group_by(address, Year) %>% summarise(TotalNormal = sum(NormalConsSQFT))
 for (proj in 1:nrow(y1)) {
   if (y1$TotalNormal[proj] == 0) {
     df_e1 <- subset(df_e1, !(df_e1$address == y1$address[proj] & df_e1$Year == y1$Year[proj]))
   }
 }
-nrow(df_e1)
 ```
 
 ```{r, echo=FALSE}
-# Find mean consumption for all records in dataset per month
+# mean consumption for all records in dataset per month
 m1 <- df_e1 %>% group_by(Month, Year) %>% summarise(MeanNormalCons = mean(NormalConsSQFT))
 ```
 
 ```{r, echo=FALSE}
+# create a graphable date
 m1$ym <- as.yearmon(paste(m1$Year, m1$Month), "%Y %m")
+
+# plot month and year by the mean normalized electricity consumption of CDBG homes
 p2 <- ggplot(m1, aes(x=ym, y=MeanNormalCons)) + geom_line() + labs(x = '', y = 'Mean kWh/sq ft/day', title = 'Mean consumption of electricity for households with "Homeowner Rehbailitation" projects over time') + expand_limits(y = 0) + theme(axis.text.x = element_blank(), axis.ticks.x = element_blank())
-p2
 ```
 ```{r, echo=FALSE}
+# create a graphable date
 df_w$date <- ymd(paste(df_w$Year,df_w$Month,'28', sep="-"))
+
+# narrow the date range for comparison with consumption
 df_w <- subset(df_w, df_w$date > '2011-11-28' & df_w$date < '2019-01-28')
+
+# plot of weather
 p3 <- ggplot(df_w, aes(x=date, y=MeanTemp)) + geom_line() + labs(x = 'Time', y = 'Average Temperature (°F)')
-p3
 ```
 
 ```{r, echo=FALSE}
+# plot all three subplots in one place
 p <-subplot(p1,p2,p3, nrows = 3, titleY = TRUE, titleX = TRUE) %>% layout(title = "Mean Consumption (gas and electricity) of Homeowner Rehab Projects") %>% layout(autosize = F, width = 1000, height = 500, margin = m)
-p 
-orca(p, 'output.png')
 ```
